# tree-sitter-osgi-bundle-manifest

./: .gitmodules  AGENTS.md  CMakeLists.txt  Cargo.toml  DESIGN.md  Makefile  Package.swift  binding.gyp  flake.nix  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-osgi-bundle-manifest.pc.in
bindings/c/tree_sitter/: tree-sitter-osgi-bundle-manifest.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  binding_test.js  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_osgi_bundle_manifest/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterOsgiBundleManifestTests/: TreeSitterOsgiBundleManifestTests.swift
queries/: highlights.scm  tags.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: manifest_test.txt
test/highlights/: config.json
