[package]
name = "tree-sitter-osgi-bundle-manifest"
description = "tree-sitter grammar for Java OSGi Bundle Manifest files"
version = "0.1.0"
authors = [""]
license = "Apache-2.0"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "osgi-bundle-manifest"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/impure0xntk/tree-sitter-osgi-bundle-manifest"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.8"
