[build-system]
requires = ["setuptools>=62.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-osgi-bundle-manifest"
description = "tree-sitter grammar for Java OSGi Bundle Manifest files"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "osgi-bundle-manifest"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{  }]
requires-python = ">=3.10"
license.text = "Apache-2.0"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/impure0xntk/tree-sitter-osgi-bundle-manifest"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
